<resources>
	<string name="action_vip_pass">VIP Pass</string>
	<string name="action_gyms">Gym Locator</string>
	<string name="action_offers">Offers</string>
	<string name="action_events">Events</string>
	<string name="action_share">Share App</string>
	<string name="action_rate_us">Rate Us</string>
	<string name="action_terms">Terms and Conditions</string>
    <string name="action_vacation">Going on Vacation</string>
    <string name="action_reset">Reset Body Stats</string>
    <string name="disclaimer_title"><u>Disclaimer</u></string>
    <string name="disclaimer_description">
	You expressly agree that the use of this software is at your own risk. You also further expressly agree that you have completed 13 years of age and in sound health conditions for the use of “My Daily Fitness Guide.”Before you start to workout, it is recommended to consult a doctor.\n
    Know your limits and capabilities! \n\n
    It is recommended to advance in a gradual manner, and not to skip and use higher weights or difficult exercises which your body is not ready for. \n\n
    All material herein is provided for informative purpose only and may not be construed as personal medical advice.\n\n
    No action should be taken based solely on the contents of this information; instead, users of this software should consult appropriate health professionals on any matter relating to their health and well-being. \n\n
	Any application of the recommendations or use of the information contained therein is at your own discretion and sole risk, and you specifically waive any right to make any claims against F2 Fun &amp; Fitness (India) Pvt. Ltd., its officers, Directors, Employees, agents, affiliates, business associates or representatives as the result of the use of such information.\n\n
	Under no circumstances shall F2 Fun &amp; Fitness (India) Pvt. Ltd., its officers, Directors, Employees, agents, affiliates, business associates or representatives be liable to you or any third-party for any direct or indirect, consequential, incidental, special or punitive damages, whether in contract or in tort, including negligence, arising in any way from the use of information or the results of the use of the information provided therein.\n\n
	F2 Fun &amp; Fitness (India) Pvt. Ltd. is not a licensed medical care provider. The information is provided with the understanding that Gold’s Gym India is not engaged in the practice of medicine or any other health-care profession and does not enter into a health-care practitioner or any patient relationship with any users.\n\n
	F2 Fun &amp; Fitness (India) Pvt. Ltd.  is not responsible for the accuracy, reliability, effectiveness, or correct use of information you receive through our product, or for any health issues or problems that may result from training programs, \n\n
	F2 Fun &amp; Fitness (India) Pvt. Ltd. is not responsible for errors or omissions. None of the information presented by this software is intended to diagnose, treat, mitigate or cure any disease.\n\n
	Any information provided by this software, including exercises execution and information, and generated workouts, is provided for informative purposes only.\n\n
	F2 Fun &amp; Fitness (India) Pvt. Ltd.  is not liable or responsible in any way for the health or safety of any user of this program or its products.\n\n
	You should understand that when participating in any exercise or exercise program, there is the possibility of physical injury. If you engage in this exercise or exercise program, you agree that you do so at your own risk, are voluntarily participating in these activities, assumes all risk of injury to yourself, and agree to release and discharge F2 Fun &amp; Fitness (India) Pvt. Ltd.  and its officers, Directors, Employees, agents, affiliates, business associates or representatives from any or all claims or causes of action known or unknown, arising out of F2 Fun &amp; Fitness (India) Pvt. Ltd. and / or its officers, Directors, employees, agents, affiliates, business associates or representatives negligence.\n\n
	F2 Fun &amp; Fitness (India) Pvt. Ltd.  is not liable or responsible in any way for any personal injury, death or pregnancy of anyone who uses this software.\n\n
	You hereby agree that F2 Fun &amp; Fitness (India) Pvt. Ltd. receives and stores any personally identifiable information you enter on our Mobile Application or provide it in any other way (such as your name, contact number, Email id, Age, waist, location, height, weight, dietary recall, fat percentage, skeletal muscle mass) at your sole discretion. Also, if you contact F2 Fun &amp; Fitness (India) Pvt. Ltd. Online, we will keep a record of that correspondence. Such information is known to F2 Fun &amp; Fitness (India) Pvt. Ltd. when it is voluntarily submitted or posted to us.\n
    </string>
    <string name="license_title"><u>End User License Agreement</u></string>
    <string name="license_description">
    By downloading any application from F2 Fun &amp; Fitness (India) Private limited (herein after referred as “The Company”), installing or using this application or any portion thereof (“Application”), you agree to the following terms and conditions (the “Terms and Conditions”).\n\n
    <b>1. USE OF APPLICATION</b>\n\n
    a. The Company grants you the non-exclusive, non-transferable, limited right and license to install and use this Application solely only for your personal use. It MAY NOT in any case be used for commercial purposes.\n\n
    b. You may not use the Application in any manner that could damage, disable or impair or disrupt the Application nor may you use the Application in any manner that could interfere with any other party’s use and enjoyment of the Application (or servers or networks connected to the Application).\n\n
    c.  You are solely responsible for any use of the Application and for any breach of your obligations under the Terms and Conditions, and for the consequences (including any loss or damage which The Company may suffer) as a result of any such breach.\n\n
    <b>2. PROPRIETARY RIGHTS</b>\n\n
    You acknowledge that (a) the Application contains proprietary and confidential information that is protected by applicable intellectual property and other laws, and (b) The Company owns all right, title and interest in and to the Application and content, excluding content provided by you, that may be presented or accessed through the Application, including without limitation all Intellectual Property Rights therein and thereto. “Intellectual Property Rights” means any and all rights existing from time to time under patent law, copyright law, trade secret law, trade mark law, unfair competition law, and any and all other proprietary rights, and any and all applications, renewals, extensions and restorations thereof, now or hereafter in force and effect worldwide. You agree that you will not allow any third party to, (i) copy, sell, license, distribute, transfer, modify, adapt, translate, prepare derivative works from, decompile, reverse engineer, disassemble or otherwise attempt to derive source code from the Application or content that may be presented or accessed through the Application for any purpose, unless otherwise permitted by F2, (ii) take any action to circumvent or defeat the security or content usage rules provided, deployed or enforced by any functionality (including without limitation digital rights management functionality) contained in the Application, (iii) use the Application to access, copy, transfer or retransmit content in violation of any law or third party rights, or (iv) remove, obscure, or alter The Company’s or any third party trade marks, copyright notices, trade marks, or other proprietary rights notices affixed to or contained within or accessed in conjunction with or through the Application.\n\n
    <b>3. THE COMPANY TERMS OF SERVICE AND PRIVACY POLICY</b>\n\n
    a. The Company’s Privacy Policy explains how The Company treats your information and protects your privacy when you use the Application. You agree to the use of your data in accordance with The Company’s privacy policies.\n\n
	b. Your use of any feature of the Application is also governed by The Company’s Terms of Use. Terms of Use and Privacy policy may be updated or modified. It is advised you to check the Terms of Use and Privacy Policy periodically as they may be modified.\n\n
	<b>4. TERMINATION</b>\n\n
	These Terms and Conditions will continue to apply until terminated by either you or The Company as set forth below. You may terminate these Terms and Conditions at any time by permanently deleting the Application from your mobile device or any other device in its entirety. Your rights automatically and immediately terminate without notice from The Company or any Third Party. If you fail to comply with any provision of these Terms and Conditions. In such event, you must immediately delete the Application.\n\n
	<b>5. INDEMNITY</b>\n\n
	To the maximum extent permitted by law, you agree to defend, indemnify and hold harmless The Company, its affiliates and their respective directors, officers, employees and agents from and against any and all claims, actions, suits or proceedings, as well as any and all losses, liabilities, damages, costs and expenses (including reasonable attorneys fees) arising out of or accruing from your use of the Application, including your downloading, installation, or use of the Application, or your violation of these Terms and Conditions.\n\n
	<b>6. DISCLAIMER OF WARRANTIES</b>\n\n
	a. YOU EXPRESSLY UNDERSTAND AND AGREE THAT YOUR USE OF THE APPLICATION IS AT YOUR SOLE DISCRETION AND RISK AND THAT THE APPLICATION IS PROVIDED AS IS AND AS AVAILABLE WITHOUT WARRANTY OF ANY KIND.\n\n
	b. YOU ARE SOLELY RESPONSIBLE FOR ANY DAMAGE TO YOUR MOBILE DEVICE, OR OTHER DEVICE, OR LOSS OF DATA THAT RESULTS FROM SUCH USE.\n\n
	c. THE COMPANY FURTHER EXPRESSLY DISCLAIMS ALL WARRANTIES AND CONDITIONS OF ANY KIND, WHETHER EXPRESS OR IMPLIED, INCLUDING, BUT NOT LIMITED TO THE IMPLIED WARRANTIES AND CONDITIONS OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT, WITH RESPECT TO THE APPLICATION.\n\n
	<b>7. LIMITATION OF LIABILITY</b>\n\n
	YOU EXPRESSLY UNDERSTAND AND AGREE THAT THE COMPANY, ITS SUBSIDIARIES AND AFFILIATES, AND ITS LICENSORS ARE NOT LIABLE TO YOU UNDER ANY THEORY OF LIABILITY FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, CONSEQUENTIAL OR EXEMPLARY DAMAGES THAT MAY BE INCURRED BY YOU THROUGH YOUR USE OF THE APPLICATION, INCLUDING ANY LOSS OF DATA OR DAMAGE TO YOUR MOBILE DEVICE, WHETHER OR NOT THE COMPANY OR ITS REPRESENTATIVES HAVE BEEN ADVISED OF OR SHOULD HAVE BEEN AWARE OF THE POSSIBILITY OF ANY SUCH LOSSES ARISING.\n
   
    </string>
	<string name="medical_note">Tell us about your medical condition</string>
	<string name="medical_label">Any Health Problems</string>
	<string name="check_hyper">Heart / Hypertension / High BP</string>
	<string name="check_diabetese">Diabetes</string>
	<string name="check_back">Lower back</string>
	<string name="check_spondilytis">Spondilytis</string>
	<string name="check_knee">Knee</string>
	<string name="check_wrist">Wrist</string>
	<string name="check_pregnancy">Pregnancy</string>
	<string name="check_thyroid">Thyroid (hypo thyroid)</string>
	<string name="check_cholesterol">Cholesterol</string>
	<string name="check_pcos">PCOS</string>
	<string name="check_other">Any Other Life Threatening Diseases</string>
	<string name="check_none">None</string>
	<string name="next"> NEXT </string>
	<string name="question_text">Is This Excess Weight Due To - </string>
	<string name="fat"> Fat </string>
	<string name="muscle">Muscle</string>
	<string name="dont_know"> Don\'t Know</string>
    <string name="enter_weight">Weight in Kgs</string>
    <string name="enter_pbf">Percentage Body Fat</string>
    <string name="enter_smm">Skeletal Muscle Mass</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
</resources>