<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_vip_pass"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_vip_pass"
    />
    <item android:id="@+id/action_gyms"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_gyms"
    />
    <item android:id="@+id/action_offers"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_offers"
     />
    <item android:id="@+id/action_events"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_events"
     />
    <item android:id="@+id/action_vacation"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_vacation"
     />
    <item android:id="@+id/action_reset"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_reset"
     />
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_share"
    />
    <item android:id="@+id/action_rate_us"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_rate_us"
    />
    <item android:id="@+id/action_terms"
          android:icon="@drawable/ic_launcher"
          android:title="@string/action_terms"
    />
</menu>