<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:id="@+id/parent_layout_medical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

     <TextView 
	        android:id="@+id/medicalNote"       
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/medical_note"
	        android:textSize="@dimen/big_title"
	        android:paddingTop="@dimen/title_padding"
	        android:paddingBottom="@dimen/title_padding"
	        android:textColor="@color/gray_text"       
	 />
     <View style="@style/horizontal_divider"
	          android:id="@+id/about_h_divider_1"	
	 />
     <LinearLayout
        android:id="@+id/name_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >
     <TextView
            android:id="@+id/medical_label"  
            android:layout_width="0px"
            android:layout_height="fill_parent"      
            android:layout_weight="0.37"  
	        android:paddingTop = "@dimen/cell_padding"
	        android:paddingBottom = "@dimen/cell_padding"
	        android:paddingLeft="@dimen/cell_padding"
	        android:paddingRight="@dimen/cell_padding"
	        android:text="@string/medical_label"
	        android:textColor="@color/gray_text"   
	        android:textSize="@dimen/medium_title"
      />
     <View style="@style/vertical_divider"
	          android:id="@+id/about_v_divider_1"
	 />
     <LinearLayout      
            android:layout_width="0px"
            android:layout_height="fill_parent"        
            android:layout_weight="0.6"
            android:paddingTop = "@dimen/zero_padding"
	        android:paddingBottom = "@dimen/zero_padding"
	        android:paddingLeft="@dimen/cell_padding"
	        android:paddingRight="@dimen/zero_padding"
    		android:orientation="vertical"
     >
     	<CheckBox
	        android:id="@+id/check_hyper"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_hyper" />
     	<CheckBox
	        android:id="@+id/check_diabetese"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_diabetese" />
     	<CheckBox
	        android:id="@+id/check_back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_back" />
     	<CheckBox
	        android:id="@+id/check_spondilytis"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_spondilytis" />
     	<CheckBox
	        android:id="@+id/check_knee"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_knee" />
     	<CheckBox
	        android:id="@+id/check_wrist"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_wrist" />
     	<CheckBox
	        android:id="@+id/check_pregnancy"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_pregnancy" />
     	<CheckBox
	        android:id="@+id/check_thyroid"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_thyroid" />
     	<CheckBox
	        android:id="@+id/check_cholesterol"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_cholesterol" />
     	<CheckBox
	        android:id="@+id/check_pcos"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_pcos" />
     	<CheckBox
	        android:id="@+id/check_other"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_other" />
     	<CheckBox
	        android:id="@+id/check_none"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/check_none" />
     	
     </LinearLayout>
        
     </LinearLayout>    
     
     <View style="@style/horizontal_divider"
	          android:id="@+id/about_h_divider_2"	
	 />

</LinearLayout>
</ScrollView>