<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >


   <TextView 
		android:id="@+id/question_text"       
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"	        
		android:text="@string/question_text"
		android:paddingTop="@dimen/cell_padding"
		android:paddingBottom="@dimen/mini_padding"
		android:textSize="@dimen/big_title"
		android:textStyle="italic"
		android:paddingLeft="@dimen/cell_padding"
		/>
   
    <RadioGroup 
	      	android:id="@+id/options_radio"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="@dimen/mini_padding"
		    android:paddingLeft="@dimen/title_padding"
		    android:orientation="vertical">
			    <RadioButton android:id="@+id/radio_fat"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/fat"
			        android:textSize="@dimen/medium_title"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/radio_muscle"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/muscle"
			        android:textSize="@dimen/medium_title"
			        android:onClick="onRadioButtonClicked"/>
			    <RadioButton android:id="@+id/radio_dont_know"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/dont_know"
			        android:textSize="@dimen/medium_title"
			        android:onClick="onRadioButtonClicked"/>
	  </RadioGroup>
	  
    <TextView 
		android:id="@+id/result_text"       
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"	        
		android:text=""
		android:paddingTop="@dimen/title_padding"
		android:paddingBottom="@dimen/small_padding"
		android:paddingLeft="@dimen/small_padding"
		android:paddingRight="@dimen/small_padding"
		android:textSize="@dimen/medium_title"
		android:gravity="center_horizontal" 
		/>
    
    <View style="@style/horizontal_divider"
	          android:id="@+id/about_h_divider_1"
	          android:paddingTop="@dimen/title_padding"	
	 />
    <TextView android:id="@+id/ok_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/cell_padding"
            android:paddingBottom="@dimen/cell_padding"
            android:text="@string/next"
            android:textColor="@color/blue_text"
	        android:textSize="@dimen/medium_title" />

    
</LinearLayout>    